fix x-clear class on IE
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@520 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/BaseLayerTool/css/baselayertool.css
+++ b/chsdi/public/GeoAdmin.ux/BaseLayerTool/css/baselayertool.css
@@ -17,6 +17,11 @@
     width:17px;
 }
 
+/* IE issue when displaying the tool into a toolbar */
+.x-panel-tbar .x-clear {
+    font: 0;
+}
+
 .x-slider-horz {
     background:transparent url(../img/slider-bg.png) no-repeat scroll 0 -22px;
     padding-left:7px;
